Remove habits feature
